Playlist: fixed issue where dashboard title was not visible when playing playlist

--- a/public/css/less/grafana.less
+++ b/public/css/less/grafana.less
@@ -36,7 +36,6 @@
   .grafana-menu-zoom-out,
   .add-row-panel-hint,
   .grafana-menu-refresh,
-  .top-nav-dashboards-btn,
   .top-nav-dash-actions {
     display:none;
   }
